# arrow-wasm

./: Dockerfile  README.md  build_arrow.sh  build_aws_c_deps.sh  build_aws_sdk.sh  build_curl.sh  build_openssl.sh  build_wasm_module.sh  build_zlib.sh  setup_emscripten.sh
.github/workflows/: publish.yml
patches/: arrow_cmake.patch  arrow_filesystem_s3fs.patch  arrow_io_util.patch  arrow_reader.patch  aws_client.patch  aws_profile_config_loader.patch  client_configuration.patch  curl_handle_container.patch  curl_handle_container_header.patch  curl_http_client.patch  curl_http_client_header.patch
src/: CMakeLists.txt  arrow_wasm.cc  arrow_wasm.d.ts  index.js  package.json
